--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
                 <br>
                 Today one of the most important technology is IoT and its full form is Internet of Things.The Internet of things have many type of electronic
                 and other devices of daily use.The motive of IoT is to connect all the daily use devices to the internet and add the dge capabilities to the devices.
-                Using this technology, most of the devices are getting more and more interactive 
+                Using this technology, most of the devices are getting more and more interactive because they are now made such that they can transfer and recive data 
+                from the cloud and process them as well and this is very important from tyhe aspect odf Automation.
             </div>
             <br>
             <div id="ds">
-
+                Data Science is an important field of mathematics and this is going to be one of the best branch in future as there is a huge amount of data generated in 
+                the present time and in future it will exponentially increase.
             </div>
         </p>
 
