updated the info and footer tag
updated the info and footertag

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                 Today one of the most important technology is IoT and its full form is Internet of Things.The Internet of things have many type of electronic
                 and other devices of daily use.The motive of IoT is to connect all the daily use devices to the internet and add the dge capabilities to the devices.
                 Using this technology, most of the devices are getting more and more interactive because they are now made such that they can transfer and recive data 
-                from the cloud and process them as well and this is very important from tyhe aspect odf Automation.
+                from the cloud and process them as well and this is very important from tyhe aspect odf Automation.we can now a dys find the IoT devices amst everywhere 
+                like in fridges , washing machines ,sennsors, even in smart houses.There are many IT kits available in market for development.
             </div>
             <br>
             <div id="ds">
@@ -68,5 +69,6 @@
     <div id="top">
         <button id="topbutton" onclick="gototop()" id="myBtn" width="50px" height="50px" title="Go to top"><img src="top.png" alt="gototop" width="25" height="25s"></button>
    </div>
+   <footer>This is the footer portion</footer>
 </body>
 </html>
