--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                     <a href = "#tech">Technology</a>
                     <ul>
                         <li><a href="#iot">IoT</a></li>
-                        <li><a href="#ds">DS</a></li>
+                        <li><a href="#ds">Data Science</a></li>
+                        <li><a href="#3dp">3d-printing</a></li>
                     </ul>
                 </li>
                 <li>
@@ -53,22 +54,50 @@
                 <u><h3>IoT : Internet Of Things</h3></u>
                 <br>
                 Today one of the most important technology is IoT and its full form is Internet of Things.The Internet of things have many type of electronic
-                and other devices of daily use.The motive of IoT is to connect all the daily use devices to the internet and add the dge capabilities to the devices.
+                and other devices of daily use.The motive of IoT is to connect all the daily use devices to the internet and add the Edge capabilities to the devices.
                 Using this technology, most of the devices are getting more and more interactive because they are now made such that they can transfer and recive data 
-                from the cloud and process them as well and this is very important from tyhe aspect odf Automation.we can now a dys find the IoT devices amst everywhere 
-                like in fridges , washing machines ,sennsors, even in smart houses.There are many IT kits available in market for development.
+                from the cloud and process them as well and this is very important from tyhe aspect odf Automation.we can now a days find the IoT devices amst everywhere 
+                like in fridges , washing machines ,sensors, even in smart houses.There are many IoT kits available in market for development.Some of the popular IoT kits are 
+                based on kits bolt IoT it, arduino kits, Raspberry pi, etc and they ensure to send small packets in bytes to kilibyte rande and for this they use the MQTT
+                (Message query Telemetry Transport) protocols unlike the other protocols used to do through which they transfer small data packets.
+                <br>
+                <br><div class="img" align="center"><img src="iot.jpg" alt="iot"></div>
             </div>
             <br>
             <div id="ds">
+                <u><h3>Data Science</h3></u>
                 Data Science is an important field of mathematics and this is going to be one of the best branch in future as there is a huge amount of data generated in 
-                the present time and in future it will exponentially increase.
+                the present time and in future it will exponentially increase. Data is new fuel in 21st century and onwards and so the data analysis is also important so 
+                here comes the need of data scientists. Data science is now a days starting as degrees in most of the colleges and accepted by all other Universities. The
+                Job of of data scientists is one of the sexiest job and with hisghest paying salary in the industry.
+                Data science deals with all structured and unstructured data as well and ten these datatsets are used for diiferent type of computational earnings.
+                <br><div class="img" align="center"><img src="ds.jpg" alt="iot"></div>
+            </div>
+        </p>
+        <br>
+            <div id="3dp">
+                <u><h3>3D-Printing</h3></u>
+                3D-Printing is yet another popular technique used in most of the fields to draw out the 3d-objects in the real world. 3d-models are designed in the 
+                3d-modelling softwares like in the Autodesk fusion 360 and many other alternatives are available in market and then creating a .stl file of the model
+                for printing in the real world.
+                Basically, this technology is new to the world and not so much revealed but now a days it is used to create the artificial masks for preventing the spread of covid-19.
+                Not only this but also this technology is used to create slabs and create small products and in electronics it is used to create the parts that are not ease to do manually.
+                <br><div class="img" align="center"><img src="3dp.jpg" alt="iot"></div>
             </div>
         </p>
 
+        <div id="top">
+            <button id="topbutton" onclick="gototop()" id="myBtn" width="50px" height="50px" title="Go to top"><img src="top.png" alt="gototop" width="25" height="25s"></button>
+       </div>
+       <div id="contact">
+           <p>
+            <u><h3>Contact</h3></u>
+               For providing any feedback or any query please drop a mail at <a style="text-decoration:none;color: rgb(239, 241, 117);" href="mailto:anandprabhakar0507@gmail.com">anandprabhakar0507@gmail.com</a>
+           </p>
+       </div>
     </article>
-    <div id="top">
-        <button id="topbutton" onclick="gototop()" id="myBtn" width="50px" height="50px" title="Go to top"><img src="top.png" alt="gototop" width="25" height="25s"></button>
-   </div>
-   <footer>This is the footer portion</footer>
+    
+   <br><br>
+   <footer>This website is created with educational purpose and this project is developed by <a href="mailto:anandprabhakar0507@gmail.com">Anand Prabhakar &copy;</a> as a part of web designing project</footer>
 </body>
 </html>
