--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
             <button class="buttons" onclick="big(-1)">A-</button>
         </div>
         <p>
-            This article is writen with the purpose to introduce some popular technologies used in the industry.
-            At the present time we can see that there is many technologies emerging at present time some due to the new IT modernization.
+            This article will introduce you to some popular technologies used in the industry.
+            At present, we can see that there is many technologies emerging at present time some due to the new IT modernization.
             On the other hand the current situation of covid-19 pandemic demands the enhanced technology deals with the situation.
             Current situation demands for technology that motivates the development related to the wireless technology integrations.
-            It can be said that in the upcoming time many different technology will emerge as we all know that, "necessity is the mother of Invention".
-            Some of these technologies are drones, humanoid and general purpose robots, and others listed below in this blog.so let us start the blog..
+            It can be said that in the upcoming time many different technology will emerge as we all know that, "necessity is the mother of all Invention".
+            Some of these technologies are drones, humanoid and general purpose robots, and others listed below in this blog.
         </p>
         <br><br>
         <p id="tech">
             <div id="iot">
                 <u><h3>IoT : Internet Of Things</h3></u>
                 <br>
-                Today one of the most important technology is IoT and its full form is Internet of Things.The Internet of things have many type of electronic
+                Today one of the most important technology is IoT and its full form is Internet of Things.Internet of things have many type of electronic
                 and other devices of daily use.The motive of IoT is to connect all the daily use devices to the internet and add the Edge capabilities to the devices.
                 Using this technology, most of the devices are getting more and more interactive because they are now made such that they can transfer and recive data 
                 from the cloud and process them as well and this is very important from tyhe aspect odf Automation.we can now a days find the IoT devices amst everywhere 
