updated the index
changed the hr and commented the navigation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" type="text/javascripts"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
 
@@ -21,6 +21,7 @@
                 <li class ="drop">
                     <a href = "#tech">Technology</a>
                     <ul>
+                        <!--here are the navigations-->
                         <li><a href="#iot">IoT</a></li>
                         <li><a href="#ds">Data Science</a></li>
                         <li><a href="#3dp">3d-printing</a></li>
@@ -96,7 +97,7 @@
            </p>
        </div>
     </article>
-    
+    <hr>
    <br><br>
    <footer>This website is created with educational purpose and this project is developed by <a href="mailto:anandprabhakar0507@gmail.com">Anand Prabhakar &copy;</a> as a part of web designing project</footer>
 </body>
